# AgenticAI

./: .gitignore  main.py  pyproject.toml  requirements.txt
LangChain/: langchain1.ipynb
LangChain_Short/: langchain1.ipynb
LangGraph/: langGraph.ipynb
Loaders/: DirectoryLoader.py  textloader.py  webbase_loader.py
Prompts/: chatbot.py  messages.py  prompts_ui.py  promts.ipynb
Structured_output/: json_output.py  pydantic_output.py  typedict.py
chains/: conditional_chain.py  prallel_chain.py  sequential_chain.py  simple_chain.py
output_parsers/: jop.py  pop.py  sop.py
runnable/: passThrough_runnable.py  run_branch.py  run_lambda.py  runable_sequence.py  runnable_prallel.py
